Switched to trimmed fastq